create links in notebook and README

--- a/learnAlexa.ipynb
+++ b/learnAlexa.ipynb
@@ -504,7 +504,7 @@
    "source": [
     "You will need to take all the code above and paste it (or your own variation) into a file called `lambda_function.py`.  Put this in your `src` directory with all the `ask-sdk-core` modules.\n",
     "\n",
-    "You can also take the `lambda_function.py` (and other module files) from the [GitHub repo]().\n"
+    "You can also take the `lambda_function.py` (and other module files) from the [GitHub repo](https://github.com/ultradian/alexa-color-skill/tree/master/src).\n"
    ]
   },
   {
