--- a/learnAlexa.ipynb
+++ b/learnAlexa.ipynb
@@ -227,7 +227,7 @@
     "\n",
     "To simplify creating the Response, the SDK has a [`ResponseFactory`](https://alexa-skills-kit-python-sdk.readthedocs.io/en/latest/api/core.html#ask_sdk_core.response_helper.ResponseFactory) class to help build responses via chaining. Possible responses include:\n",
     "* speak(\"string to speak\")\n",
-    "* ask{\"string to use as reprompt\")\n",
+    "* ask(\"string to use as reprompt\")\n",
     "* set_card([card](https://developer.amazon.com/docs/custom-skills/request-and-response-json-reference.html#card-object))\n",
     "* set_should_end_session(boolean)\n",
     "\n",
@@ -539,7 +539,7 @@
    "metadata": {},
    "source": [
     "## create function\n",
-    "On this page, select `Author from scratch`, and under `Basic Information` enter a function name like `colorFun`.  In the `runtime` drop down, select `Python 3.6`."
+    "On this page, select `Author from scratch`, and under `Basic Information` enter a function name like `colorFun`.  In the `runtime` drop down, select `Python 3.7`."
    ]
   },
   {
